--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="welcome">Добро пожаловать!</string>
+    <string name="description">Войдите, чтобы воспользоваться функциями приложения</string>
+    <string name="email">Вход по E-mail</string>
+
+    <string name="password">Пароль</string>
+    <string name="next">Далее</string>
+    <string name="sign_up">Зарегистрироваться</string>
+    <string name="or_menu">Или войдите с помощью</string>
+    <string name="vk">Войти с VK</string>
+    <string name="yandex">Войти с Yandex</string>
+    <string name="actions">Акции и новости</string>
 </resources>
